--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Slabo+13px&family=Staatliches&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -36,53 +37,55 @@
     </header>
 
     <main>
-        <section class="blogContainer">
-            <h1>Nuestro Blog</h1>
-            <article>
-                <img src="./img/blog1.jpg" alt="">
-                <h2>Tipos de Grano de Café</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?</p>
-                <div class="blogContainer_button">
-                    <p>LEER ENTRADA</p>
-                </div>
-            </article>
-            <article>
-                <img src="./img/blog2.jpg" alt="">
-                <h2>3 Deliciosas Recetas de Café</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?</p>
-                <div class="blogContainer_button">
-                    <p>LEER ENTRADA</p>
-                </div>
-            </article>
-            <article>
-                <img src="./img/blog3.jpg" alt="">
-                <h2>Beneficios del Café</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?</p>
-                <div class="blogContainer_button">
-                    <p>LEER ENTRADA</p>
-                </div>
-            </article>
-        </section>
+        <div class="container">
+           <section class="blogContainer">
+                <h1>Nuestro Blog</h1>
+                <article>
+                    <img src="./img/blog1.jpg" alt="">
+                    <h2>Tipos de Grano de Café</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?</p>
+                    <div class="blogContainer_button">
+                        <p>LEER ENTRADA</p>
+                    </div>
+                </article>
+                <article>
+                    <img src="./img/blog2.jpg" alt="">
+                    <h2>3 Deliciosas Recetas de Café</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?</p>
+                    <div class="blogContainer_button">
+                        <p>LEER ENTRADA</p>
+                    </div>
+                </article>
+                <article>
+                    <img src="./img/blog3.jpg" alt="">
+                    <h2>Beneficios del Café</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?</p>
+                    <div class="blogContainer_button">
+                        <p>LEER ENTRADA</p>
+                    </div>
+                </article>
+            </section>
 
-        <section class="curseContainer">
-            <h1>Nuestros Cursos y Talleres</h1>
-            <article>
-                <h2>Técnicas de Extracción de Café</h2>
-                <p><b>Precio:</b> Gratis</p>
-                <p><b>Cupo:</b> 20</p>
-                <div class="curseContainer__button">
-                    <p>MÁS INFORMACIÓN SOBRE NUESTROS CURSOS</p>
-                </div>
-            </article>
-            <article>
-                <h2>4 Recetas de Café para Principiantes</h2>
-                <p><b>Precio:</b> Gratis</p>
-                <p><b>Cupo:</b> 20</p>
-                <div class="curseContainer__button">
-                    <p>MÁS INFORMACIÓN SOBRE NUESTROS CURSOS</p>
-                </div>
-            </article>
-        </section>
+            <section class="curseContainer">
+                <h1>Nuestros Cursos y Talleres</h1>
+                <article>
+                    <h2>Técnicas de Extracción de Café</h2>
+                    <p><b>Precio:</b> Gratis</p>
+                    <p><b>Cupo:</b> 20</p>
+                    <div class="curseContainer__button">
+                        <p>MÁS INFORMACIÓN SOBRE NUESTROS CURSOS</p>
+                    </div>
+                </article>
+                <article>
+                    <h2>4 Recetas de Café para Principiantes</h2>
+                    <p><b>Precio:</b> Gratis</p>
+                    <p><b>Cupo:</b> 20</p>
+                    <div class="curseContainer__button">
+                        <p>MÁS INFORMACIÓN SOBRE NUESTROS CURSOS</p>
+                    </div>
+                </article>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
